[RAPPORT] Complétion, manque plus que les courbes

--- a/report/title.tex
+++ b/report/title.tex
@@ -25,14 +25,15 @@
 \begin{minipage}[t]{0.6\textwidth}
   \begin{flushright} \large
     \emph{Responsables :} \\
-    M.~Jean \textsc{Machin} \\
-    M.~Pierre \textsc{Bidon}
+    M.~Thierry \textsc{Lecroq} \\
+    M.~Nicolas \textsc{Bedon} \\
+    M.~Arnaud \textsc{Lefebvre}
   \end{flushright}
 \end{minipage}
 
 \vfill
 
-{\large 14 décembre 2015}
+{\large 13 janvier 2016}
 
 \end{center}
 
