--- a/report/rapport.tex
+++ b/report/rapport.tex
@@ -1,4 +1,4 @@
-\documentclass[a4paper,11pt,final]{article}
+\documentclass[hidelinks,a4paper,11pt,final]{article}
 % Pour une impression recto verso, utilisez plutôt ce documentclass :
 %\documentclass[a4paper,11pt,twoside,final]{article}
 
@@ -6,14 +6,19 @@
 \usepackage[utf8]{inputenc}
 \usepackage[T1]{fontenc}
 \usepackage[pdftex]{graphicx}
+\usepackage[a4paper, margin=2cm]{geometry}
 \usepackage{setspace}
 \usepackage{hyperref}
+\usepackage{minted}
+\usepackage{dirtree}
+\usepackage[linesnumbered,lined,commentsnumbered]{algorithm2e}
 \usepackage[french]{varioref}
 
-\newcommand{\reporttitle}{Exemple de rapport}     % Titre
+\newcommand{\reporttitle}{Projet d'Algorithmique du texte}     % Titre
 \newcommand{\reportauthor}{Florian \textsc{Inchingolo}\\ Yohann \textsc{Henry}} % Auteur
-\newcommand{\reportsubject}{Stage de fin d'étude} % Sujet
+\newcommand{\reportsubject}{Implémentation de l'algorithme d'Aho-Corasick} % Sujet
 \newcommand{\HRule}{\rule{\linewidth}{0.5mm}}
+\renewcommand{\O}[1]{$\mathcal{O}(#1)$}
 \setlength{\parskip}{1ex} % Espace entre les paragraphes
 
 \hypersetup{
