--- a/report/contenu.tex
+++ b/report/contenu.tex
@@ -314,11 +314,15 @@ environ 15 minutes, même s'il est à noter que les temps d'éxécution varient 
 selon la machine utilisée.
 
 \subsubsection*{Graphique sur les temps d'exécution}
-TODO graph
-
+  \includegraphics [width=30mm]{images/longueur5-15.jpg} \\[0.5cm]
+  \begin{spacing}{1.5}
+  \includegraphics [width=30mm]{images/longueur15-30.jpg} \\[0.5cm]
+  \begin{spacing}{1.5}
+  \includegraphics [width=30mm]{images/longueur30-60.jpg} \\[0.5cm]
+  \begin{spacing}{1.5}
 \subsubsection*{Conclusion sur les temps d'éxécution}
-TODO mettre des nombres issus du graph
-
+En analysant ces graphiques, on constate que la longueur des mots n'impliquent pas de changement majeur dans le temps d'éxécution.
+De plus, les graphiques mettent en relief la différence de coût entre les différentes implémentations.
 Nous voyons donc que dans tous les cas, le trie matriciel est plus rapide que le mixte
 et le trie en liste.
 
